dnl Process this file with autoconf to produce a configure script.
AC_INIT(elf2flt.c)

AC_MSG_CHECKING(--with-libbfd=?)
AC_ARG_WITH(libbfd,
	[ --with-libbfd=<file>  path to libbfd.a library to use ],
	[ ac_libbfd=$withval ],
	[ ac_libbfd=NONE ]
)
AC_MSG_RESULT($ac_libbfd)

AC_MSG_CHECKING(--with-libiberty=?)
AC_ARG_WITH(libiberty,
	[ --with-libiberty=<file>  path to libiberty.a library to use ],
	[ ac_libiberty=$withval ],
	[ ac_libiberty=NONE ]
)
AC_MSG_RESULT($ac_libiberty)

AC_CANONICAL_HOST
AC_CANONICAL_TARGET

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.
if test "$ac_libbfd" = "NONE" -o "$ac_libiberty" = "NONE" ; then
	echo
	echo "You need to specify the location of the libfd.a and libiberty.a"
	echo "host libraries from the binutils package."
	echo
	echo "Run configure again specifying these options:"
	echo
	echo "  ./configure --target=<ARCH> --with-libbfd=<libbfd.a> --with-libiberty=<libiberty.a>"
	echo
	exit 1
fi
LDFLAGS="$LDFLAGS $ac_libbfd $ac_libiberty"

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_FUNC_VPRINTF

dnl Subsitute values
AC_SUBST(target)
AC_SUBST(target_alias)
AC_SUBST(target_cpu)
AC_SUBST(target_os)
AC_SUBST(target_vendor)

AC_OUTPUT(Makefile)

